--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -10,6 +10,7 @@
   grid-template-rows: auto 1fr auto;
   min-height: 100svh;
   font-family: var(--font-geist-sans);
+  scroll-behavior: smooth;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -27,6 +28,15 @@
   display: flex;
   flex-direction: column;
   gap: 0;
+}
+
+.section {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden;
 }
 
 @media (prefers-color-scheme: dark) {
